Fixed activites cards overflow on tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,6 @@ a {
     }
 
     .activites-cards .card {
-        height: 270px;
         padding: 0;
     }
 
